@@ -6,9 +6,8 @@ make.beta <- function(mua, siga, rpar, random.nb, correlation){
   normal  <-     nr[rpar ==  "n"]
   uniform  <-    nr[rpar ==  "u"]
   triangular  <- nr[rpar ==  "t"]
-
   Ka <- ncol(random.nb)
-  R <- nrow(random.nb)
+  R <- nrow(random.nb) 
   
   betaa <- matrix(NA, R, Ka)
   betaa.mu <- betaa.sigma <- betaa
@@ -100,7 +99,6 @@ halton <- function(prime = 3, length = 100, drop = 10){
 
 make.random.nb <- function(R, Ka, halton){
 # Create the matrix of random numbers
-  print(halton)
   if (!is.null(halton)){
     length.halton <- rep(R,Ka)
     prime <- c(2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43,
